@@ -1,3 +1,7 @@
+2006-02-03  Callum McKenzie  <callum@spooky-possum.org>
+
+	* Makefile.am: Remove the spurious dependence on gstreamer.
+
 2006-01-25  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gnomine.c: (gpointer) cast -> GINT_TO_POINTER. This should fix
